--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
       "@types/config": "^3.3.0",
       "@types/express": "^4.17.17",
       "@types/node": "^16.11.10",
-      "ts-node": "10.7.0",
+      "ts-node": "^10.7.0",
       "ts-node-dev": "^2.0.0",
       "typescript": "4.5.2"
    }
