--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
    "license": "ISC",
    "dependencies": {
       "@types/node": "^18.13.0",
+      "body-parser": "^1.19.1",
       "colyseus": "^0.14.24",
       "config": "^3.3.9",
       "dotenv": "^16.0.3",
       "envalid": "^7.3.1",
-      "typeorm": "0.3.12",
-      "reflect-metadata": "^0.1.13",
-      "pg": "^8.4.0",
       "express": "^4.17.2",
-      "body-parser": "^1.19.1"
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.12",
+      "winston": "^3.8.2"
    },
    "devDependencies": {
       "@types/config": "^3.3.0",
